...

    Box(modifier = Modifier.fillMaxSize()) {
        Scaffold(
            topBar = {
                val titleText = when (currentRoute) {
                    Screens.PersonalInformation.route -> "User profile"
                    Screens.TenantDashboard.route -> "Dashboard"
                    Screens.TenantEmptyContract.route -> "Contract"
                    Screens.ContractDetails.route -> "Contract Details"
                    Screens.UpdateRequest.route -> "Update Request"
                    Screens.MaintenanceRequestList.route -> "Maintenance"
                    Screens.BillList.route -> "Bills"
                    Screens.TenantBillScreen.route -> "My Bill"
...
